--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link  rel="stylesheet" href='css/style.css'>
-    <link  rel="stylesheet" href='css/normalize.css'>
+    <title>Wizytowka</title>
+    <link rel="stylesheet" href='css/style.css'>
+    <link rel="stylesheet" href='css/normalize.css'>
 </head>
+
 <body>
-    
+    <main class="card">
+        <article class="person">
+            <img class="person__photo" src="" alt="raf">
+            <div>
+                <header class="person__header">
+                    <h1 class="person__name">
+                        Raf
+
+                    </h1>
+
+                    <span class="person__position">junior frontend dev</span>
+                </header>
+                <p class="person__description">
+                    Programista z<strong class="person__special"> kilkunastoletnim doświadczeniem </strong>, fotograf,
+                    operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong
+                        class="person__special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę.
+                </p>
+                <p class="person__description">
+
+                    W sieci: <a class="person__link" href="#"> Facebook</a>,<a class="person__link" href="#">
+                        GitHub</a>, <a class="person__link" href="#"> Instagram</a>.
+
+                </p>
+
+            </div>
+
+
+
+
+
+
+        </article>
+
+
+
+
+
+
+
+
+    </main>
 </body>
+
 </html>
