--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
 <body>
     <main class="card">
         <article class="person">
-            <img class="person__photo" src="" alt="raf">
+            <img class="person__photo" src="img/avatar.png" alt="raf">
             <div>
                 <header class="person__header">
                     <h1 class="person__name">
-                        Raf
+                        Rafał Komar
 
                     </h1>
 
-                    <span class="person__position">junior frontend dev</span>
+                    <span class="person__position">Senior Service Desk Specialist</span>
                 </header>
                 <p class="person__description">
-                    Programista z<strong class="person__special"> kilkunastoletnim doświadczeniem </strong>, fotograf,
-                    operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong
-                        class="person__special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę.
+                    Obecnie Starszy Specjalista ds.IT <strong class="person__special"> z prawie dwu letnim  doświadczeniem </strong>, fan nowych technologi , web developmentu i
+                     <strong class="person__special">dlugiego wysypiania :) </strong>. Wizytówka stworzona na  podstawie kursu. 
                 </p>
-                <p class="person__description">
+                <p class="person__description  person__description--last ">
 
-                    W sieci: <a class="person__link" href="#"> Facebook</a>,<a class="person__link" href="#">
-                        GitHub</a>, <a class="person__link" href="#"> Instagram</a>.
+                    W sieci: 
+                <a class="person__link" href="#">Facebook</a>,
+                <a class="person__link" href="#">GitHub</a>,
+                    
+                <a class="person__link" href="#"> Instagram</a>.
 
                 </p>
 
