--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <span class="person__position">Senior Service Desk Specialist</span>
                 </header>
                 <p class="person__description">
-                    Obecnie Starszy Specjalista ds.IT <strong class="person__special"> z prawie dwu letnim  doświadczeniem </strong>, fan nowych technologi , web developmentu i
-                     <strong class="person__special">dlugiego wysypiania :) </strong>. Wizytówka stworzona na  podstawie kursu. 
+                    Obecnie Starszy Specjalista ds.IT <strong class="person__special"> z prawie dwu letnim  doświadczeniem</strong>, fan nowych technologii, web developmentu i
+                     <strong class="person__special">dlugiego wysypiania :)</strong>. Wizytówka stworzona na  podstawie kursu. 
                 </p>
                 <p class="person__description  person__description--last ">
 
